<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bback"
    android:orientation="vertical"
    android:weightSum="15">

    <View
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <ImageView
        android:id="@+id/splashImageView"
        android:layout_width="290dp"
        android:layout_height="0dp"
        android:layout_gravity="center|bottom"
        android:layout_weight="2"
        android:src="@drawable/school_logo"
        />



    <View
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <android.support.v7.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginStart="0dp"
        android:layout_weight="6.2"

        app:cardCornerRadius="20dp"
        app:cardBackgroundColor="@color/colorWhite">


        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@color/transparent"
            android:padding="10dp"
            android:text="LOGIN"
            android:gravity="center"
            android:textSize="18sp"
            android:textColor="@color/colorBlack"
            android:textStyle="bold"/>


        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView"
            android:layout_gravity="center"
            android:layout_marginEnd="0dp"
            android:background="@color/transparent"
            android:layout_marginStart="0dp"
            android:orientation="vertical">


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@+id/emailEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:completionThreshold="1"
                    android:drawableStart="@drawable/user"
                    android:drawablePadding="5dp"
                    android:hint="Eg : FirstName.LastName"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.scottyab.showhidepasswordedittext.ShowHidePasswordEditText
                    android:id="@+id/passwordEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:hint="@string/prompt_password"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:drawableStart="@drawable/key_logo"
                    android:drawablePadding="10dp"
                    android:singleLine="true"
                    android:imeOptions="actionNext"
                    />

            </android.support.design.widget.TextInputLayout>


            <Spinner
                android:id="@+id/roleSpinner"
                style="@style/Widget.AppCompat.Spinner.Underlined"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:textAlignment="center"
                android:layout_marginTop="4dp"
                android:gravity="center"
                />

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="2dp"
        android:layout_marginEnd="0dp"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        >

        <Button
            android:id="@+id/sign_in_button"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="0dp"
            android:layout_marginEnd="30dp"
            android:layout_marginStart="5dp"
            android:background="@drawable/login_bg"
            android:drawableEnd="@drawable/correct"
            android:drawablePadding="15dp"
            android:text="@string/action_login"
            android:padding="8dp"
            android:layout_gravity="center"
            android:textSize="14sp"
            android:textColor="@color/colorBlack"
            />

        <Button
            android:id="@+id/cancel_in_button"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="0dp"
            android:layout_marginStart="5dp"
            android:drawableEnd="@drawable/cross"
            android:background="@drawable/login_bg"
            android:drawablePadding="10dp"
            android:text="@string/cancel"
            android:padding="8dp"
            android:layout_gravity="center"
            android:textSize="14sp"
            android:textColor="@color/colorBlack"
            />

    </LinearLayout>

    <TextView
        android:id="@+id/forgotPassTextView"
        style="@android:style/TextAppearance.DeviceDefault.Small"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_weight="0.8"
        android:gravity="center"
        android:text="@string/forgot_password_que"
        android:textStyle="bold"
        android:textSize="17sp"
        android:textColor="@color/colorWhite"
        />


</LinearLayout>

    <!--
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2.5"
            android:src="@drawable/school_logo" />
    -->



