<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="9"
    android:orientation="vertical">


    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_centerVertical="true"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:elevation="4dp"
        app:cardCornerRadius="3dp"
        app:cardElevation="4dp">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <View
                android:id="@+id/viewVertical"
                android:layout_width="match_parent"
                android:layout_height="1.5dp"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:background="@color/view_color" />


            <View
                android:id="@+id/viewHorizontal"
                android:layout_width="1.5dp"
                android:layout_height="match_parent"
                android:layout_alignBottom="@+id/viewVertical"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:background="@color/view_color" />

            <LinearLayout
                android:id="@+id/adminAttendance_linear_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_above="@+id/viewVertical"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_toStartOf="@+id/viewHorizontal"
                android:background="@drawable/ripple_effect"
                android:orientation="vertical"
                android:weightSum="2">


                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:padding="5dp"
                    app:srcCompat="@drawable/ic_attendance"
                    tools:ignore="VectorDrawableCompat" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/admin_attendance"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/adminAbsentAttendance_linear_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_above="@+id/viewVertical"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:layout_toEndOf="@+id/viewHorizontal"
                android:background="@drawable/ripple_effect"
                android:orientation="vertical"
                android:weightSum="2">


                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:padding="5dp"
                    app:srcCompat="@drawable/ic_attendance"
                    tools:ignore="VectorDrawableCompat" />

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="2dp"
                    android:text="@string/admin_attendance_report"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/adminHostelAttendance_linear_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/viewVertical"
                android:background="@drawable/ripple_effect"
                android:orientation="vertical">


                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:padding="5dp"
                    app:srcCompat="@drawable/ic_attendance"
                    tools:ignore="VectorDrawableCompat" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/admin_hostel_attendance_report"
                    android:textStyle="bold" />

            </LinearLayout>


        </RelativeLayout>

    </android.support.v7.widget.CardView>


</RelativeLayout>

    <!--<?xml version="1.0" encoding="utf-8"?>-->
<!--<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
<!--xmlns:app="http://schemas.android.com/apk/res-auto"-->
<!--xmlns:tools="http://schemas.android.com/tools"-->
<!--android:layout_width="match_parent"-->
<!--android:layout_height="match_parent"-->
<!--android:layout_weight="9"-->
<!--android:orientation="vertical">-->


<!--<android.support.v7.widget.CardView-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="150dp"-->
    <!--android:layout_centerVertical="true"-->
    <!--android:layout_marginLeft="10dp"-->
    <!--android:layout_marginRight="10dp"-->
    <!--android:elevation="4dp"-->
    <!--app:cardCornerRadius="3dp"-->
    <!--app:cardElevation="4dp">-->

    <!--<RelativeLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="match_parent">-->

        <!--<View-->
            <!--android:id="@+id/viewHorizontal"-->
            <!--android:layout_width="1.5dp"-->
            <!--android:layout_height="match_parent"-->
            <!--android:layout_alignBottom="@+id/viewVertical"-->
            <!--android:layout_alignParentTop="true"-->
            <!--android:layout_centerHorizontal="true"-->
            <!--android:background="@color/view_color" />-->


        <!--<LinearLayout-->
            <!--android:id="@+id/adminAttendance_linear_layout"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="match_parent"-->
            <!--android:layout_above="@+id/viewVertical"-->
            <!--android:layout_alignParentStart="true"-->
            <!--android:layout_alignParentTop="true"-->
            <!--android:layout_toStartOf="@+id/viewHorizontal"-->
            <!--android:background="@drawable/ripple_effect"-->
            <!--android:orientation="vertical"-->
            <!--android:weightSum="2">-->


            <!--<ImageView-->
                <!--android:id="@+id/imageView2"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_gravity="center"-->
                <!--android:layout_marginTop="10dp"-->
                <!--android:layout_weight="1"-->
                <!--android:padding="5dp"-->
                <!--app:srcCompat="@drawable/ic_attendance"-->
                <!--tools:ignore="VectorDrawableCompat" />-->

            <!--<TextView-->
                <!--android:id="@+id/textView6"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_weight="1"-->
                <!--android:gravity="center"-->
                <!--android:padding="2dp"-->
                <!--android:text="@string/admin_attendance"-->
                <!--android:textStyle="bold" />-->

        <!--</LinearLayout>-->

        <!--<LinearLayout-->
            <!--android:id="@+id/adminAbsentAttendance_linear_layout"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="match_parent"-->
            <!--android:layout_above="@+id/viewVertical"-->
            <!--android:layout_alignParentEnd="true"-->
            <!--android:layout_alignParentTop="true"-->
            <!--android:layout_toEndOf="@+id/viewHorizontal"-->
            <!--android:background="@drawable/ripple_effect"-->
            <!--android:orientation="vertical"-->
            <!--android:weightSum="2">-->


            <!--<ImageView-->
                <!--android:id="@+id/imageView3"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_gravity="center"-->
                <!--android:layout_marginTop="10dp"-->
                <!--android:layout_weight="1"-->
                <!--android:padding="5dp"-->
                <!--app:srcCompat="@drawable/ic_attendance"-->
                <!--tools:ignore="VectorDrawableCompat" />-->

            <!--<TextView-->
                <!--android:id="@+id/textView7"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_weight="1"-->
                <!--android:gravity="center"-->
                <!--android:padding="2dp"-->
                <!--android:text="@string/admin_attendance_report"-->
                <!--android:textStyle="bold" />-->

        <!--</LinearLayout>-->

    <!--</RelativeLayout>-->


<!--</android.support.v7.widget.CardView>-->


<!--</RelativeLayout>-->